--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,10 +2,22 @@
   z-index: 1;
   background-color: #1B1135;
   border-right: 1px solid var(--border-color);
-
   padding: 0.5rem;
   display: flex;
   flex-flow: column nowrap;
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar {
+    padding: 0.5rem 1.5rem;
+    min-width: 330px;
+  }
 }
 
 .navlink {
@@ -30,6 +42,12 @@
   background-color: var(--hover-background);
 }
 
+@media (min-width: 1200px) {
+  .navlink {
+    margin: 0 0.5rem;
+  }
+}
+
 .navlink-icon {
   font-weight: 500;
   font-size: 25px;
@@ -37,12 +55,32 @@
   color: var(--text-color);
 }
 
+@media (min-width: 768px) {
+  .navlink-icon {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navlink-icon {
+    font-size: 30px;
+    min-width: 30px;
+    margin-left: 1vw;
+  }
+}
+
 .navlink p {
   display: none;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 500;
   margin-left: 20px;
   color: var(--text-color);
+}
+
+@media (min-width: 1200px) {
+  .navlink p {
+    display: inline;
+  }
 }
 
 .navlink-label {
@@ -81,13 +119,44 @@
   align-items: center;
 }
 
+@media (min-width: 768px) {
+  .navbar ul {
+    flex-flow: column nowrap;
+    align-items: center;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar ul {
+    flex-flow: column nowrap;
+    align-items: stretch;
+    margin-top: 10px;
+  }
+}
+
 .navbar .create-new-post-btn {
   position: absolute;
   bottom: 150%;
   right: 6%;
 }
+
 .navbar .create-new-post-btn span {
   display: none;
+}
+
+@media (min-width: 768px) {
+  .navbar .create-new-post-btn {
+    position: relative;
+    bottom: 0;
+    right: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar .create-new-post-btn span {
+    display: inline;
+  }
 }
 
 .create-post-modal {
@@ -126,6 +195,7 @@
   align-self: center;
   cursor: pointer;
 }
+
 .create-new-post-btn:hover {
   background-color: #C6ADFF;
 }
@@ -142,35 +212,6 @@
 }
 
 @media (min-width: 768px) {
-  .navbar {
-    padding: 0.5rem 1rem;
-  }
-  .navbar ul {
-    flex-flow: column nowrap;
-    align-items: center;
-    margin-top: 10px;
-  }
-  .navlink-icon {
-    font-size: 30px;
-  }
-
-  .navbar .create-new-post-btn {
-    position: relative;
-    bottom: 0;
-    right: 0;
-  }
-
-  .navlink-icon {
-    margin-left: 0;
-  }
-  .navbar li {
-    margin-bottom: 15px;
-  }
-
-  .modal-content {
-    width: 80%;
-  }
-
   .create-new-post-btn {
     border: none;
     padding: 1.5rem 1.5rem 1.2rem 1.5rem;
@@ -194,40 +235,6 @@
 }
 
 @media (min-width: 1200px) {
-  .navbar {
-    padding: 0.5rem 1.5rem;
-  }
-  .navlink p {
-    display: inline;
-  }
-  .navlink {
-    margin: 0 0.5rem;
-  }
-  .navlink-icon {
-    font-size: 30px;
-  }
-
-  .navbar ul {
-    flex-flow: column nowrap;
-    align-items: stretch;
-    margin-top: 10px;
-  }
-  .navlink-icon {
-    margin-left: 1vw;
-  }
-
-  .navbar li {
-    margin-bottom: 15px;
-  }
-
-  .navbar .create-new-post-btn span {
-    display: inline;
-  }
-
-  .modal-content {
-    width: 80%;
-  }
-
   .create-new-post-btn {
     cursor: pointer;
     border: none;
@@ -243,8 +250,60 @@
     justify-content: center;
     align-self: stretch;
   }
+
   .create-new-post-btn span {
     margin-left: 0.9rem;
+  }
+}
+
+.navbar li {
+  margin-bottom: 0px;
+}
+
+@media (min-width: 768px) {
+  .navbar li {
+    margin-bottom: 0px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar li {
+    margin-bottom: 8px;
+  }
+}
+
+.navbar a {
+  /* base styles */
+}
+
+@media (min-width: 1200px) {
+  .navbar a:hover {
+    background: rgb(13, 5, 34);
+  }
+}
+
+.modal-content {
+  position: relative;
+  width: min(900px, calc(100vw - 32px));
+  margin: 0;
+  z-index: 1301;
+  max-height: calc(100vh - clamp(80px, 12vh, 120px));
+  overflow-y: auto;
+  background-color: var(--surface) !important;
+  color: var(--text-color) !important;
+  border: 1px solid var(--border-color) !important;
+  border-radius: 16px;
+}
+
+@media (min-width: 768px) {
+  .modal-content {
+    width: 80%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .modal-content {
+    width: 80%;
   }
 }
 
