--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  padding: 2rem;
+  padding: 0.8rem;
   font-size: 2.5rem;
   display: flex;
   align-items: center;
@@ -9,12 +9,12 @@
   font-weight: 600;
   z-index: 100;
 
-  background-color: var(--surface);
+  background-color: #13101a;
   border-bottom: 1px solid var(--border-color);
 
   padding-left: 4.2vw;
   padding-right: 4.2vw;
-  height: 10vh;
+  height: 7vh;
 }
 
 .header > p {
@@ -26,8 +26,8 @@
 }
 
 .header-logo {
-  width: 200px;
-  height: 100px;
+  width: 140px;
+  /* height: 100px; */
   cursor: pointer;
   object-fit: contain;
 }
