--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -1,5 +1,7 @@
 .admin-container {
-  padding: 1rem;
+  /* padding: 1rem; */
+    border-right: 1px solid var(--border-color);
+    height: 100vh
 }
 
 .admin-header {
@@ -42,8 +44,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 1rem;
-  border-bottom: 1px solid var(--border-color);
+  padding: 0.6rem 1rem;
   cursor: pointer;
   transition: background-color 0.2s;
   background-color: transparent;
